{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 45,
  "lineage": "60640ef4-a2f5-32c3-b7d2-fd5a838767a6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.30.63.138",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-06-21T13:22:02.315-07:00",
            "id": "projects/f5-gcs-4261-sales-emea-se/regions/us-central1/addresses/jeremy-app-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "jeremy-app-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "f5-gcs-4261-sales-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/regions/us-central1/addresses/jeremy-app-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8000",
                  "22",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-06-21T13:22:30.136-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/f5-gcs-4261-sales-emea-se/global/firewalls/jeremy-app-allow-ports",
            "log_config": [],
            "name": "jeremy-app-allow-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/networks/jeremy-app-vpc",
            "priority": 1000,
            "project": "f5-gcs-4261-sales-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/firewalls/jeremy-app-allow-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240614",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/zones/us-central1-b/disks/jeremy-app-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/f5-gcs-4261-sales-emea-se/zones/us-central1-b/instances/jeremy-app-instance",
            "instance_id": "8133008761239920634",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "j.agboola:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDWDb6Tgpol1VhgFHVnzAHXhat23uGHucweYNlyQNfAMnM2y8QicUf1JNCyVWoiHXe/fJ56jXcO4If9qcUKCg49gFGmZwGuESmcdvtZRGLL4ADPoQsIQ9afBiDtdI5SqKuxUdhiJI07KnK5FbOw3XuoUW7QN6SvM/SO8AyudDxW0QKOht18zmnWoq/6MjVdJCQSXepcuOEkW3xN3PLjnWs4dXhpyok8yj7Gzt9evyW0fdEvpTAa/l/zpXSBKliQmdiuA0M9uprSbIe85S02DUeDRWHNVaG728KbcG9AQ4AGyf3dFf5pDkYW8e9572GefPEMdQ+d9aUHnYUT1ZyS73XOkKhABI1kVh0LjfDpEkLVjjoRWpBHcsf90AiONzSNxieLNlmiU4iTaKYMS43mTEm9JC5W/5Lemfgypn2/gFF [...]
              "startup-script": "#!/bin/bash\nsudo apt-get update -y\nsudo apt-get upgrade -y\nsudo apt-get install -y docker.io\nsudo systemctl start docker\nsudo docker pull jeremy9k/tanto\nsudo docker run -d -p 80:8000 jeremy9k/tanto\n"
            },
            "metadata_fingerprint": "VvhQT1yFcBg=",
            "name": "jeremy-app-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.30.63.138",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/networks/jeremy-app-vpc",
                "network_ip": "10.2.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/regions/us-central1/subnetworks/private-network",
                "subnetwork_project": "f5-gcs-4261-sales-emea-se"
              }
            ],
            "project": "f5-gcs-4261-sales-emea-se",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/zones/us-central1-b/instances/jeremy-app-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jeremy-app-app"
            ],
            "tags_fingerprint": "e_iUvLQLsNA=",
            "zone": "us-central1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.private_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "enable_ula_internal_ipv6": false,
            "id": "projects/f5-gcs-4261-sales-emea-se/global/networks/jeremy-app-vpc",
            "mtu": 0,
            "name": "jeremy-app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5551418367607856646",
            "project": "f5-gcs-4261-sales-emea-se",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/networks/jeremy-app-vpc"
          },
          "dependencies": [
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "private_network_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/f5-gcs-4261-sales-emea-se/global/routes/jeremy-app-priv-net",
            "name": "jeremy-app-priv-net",
            "network": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/networks/jeremy-app-vpc",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "f5-gcs-4261-sales-emea-se",
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/routes/jeremy-app-priv-net",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-21T13:22:29.584-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/f5-gcs-4261-sales-emea-se/regions/us-central1/routers/jeremy-app-router",
            "name": "jeremy-app-router",
            "network": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/networks/jeremy-app-vpc",
            "project": "f5-gcs-4261-sales-emea-se",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/regions/us-central1/routers/jeremy-app-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "f5-gcs-4261-sales-emea-se/us-central1/jeremy-app-router/jeremy-app-nat-route",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "jeremy-app-nat-route",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "f5-gcs-4261-sales-emea-se",
            "region": "us-central1",
            "router": "jeremy-app-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router",
            "google_project_service.compute_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-06-21T13:22:30.312-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/f5-gcs-4261-sales-emea-se/regions/us-central1/subnetworks/private-network",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "private-network",
            "network": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/global/networks/jeremy-app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "f5-gcs-4261-sales-emea-se",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/f5-gcs-4261-sales-emea-se/regions/us-central1/subnetworks/private-network",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_service"
          ]
        }
      ]
    }
  ]
}